--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
 
 body {
-    background-color: rgb(239, 241, 237)
+    background-color: rgba(159, 255, 203, .4)
 }
 
 .content {
@@ -21,7 +21,7 @@ h1 {
     letter-spacing: 10px;
     font-family: "Afacad Flux", sans-serif;
     font-size: 4rem;
-    margin: 0;
+    margin: 10;
     padding: 5;
     border: 4px solid rgb(0, 78, 100);
     border-radius: 10px;
@@ -41,18 +41,26 @@ h2 {
     text-decoration-color:  rgb(0, 78, 100);
 }
 
+img {
+    border-radius: 50%;
+    display: block;
+    margin: auto;
+    padding: 10px;
+    max-width: 100%;
+}
+
 p {
     line-height: 1.6;
     font-size: 1.1rem;
     font-family: "Roboto", sans-serif;
     text-align: center;
     padding: 25px;
-    margin: 0%;
+    margin: 30px;
 }
 
 ul {
     line-height: 1.6;
-    font-size: .9rem;
+    font-size: 1rem;
     font-family: "Roboto", sans-serif;
 }
 
@@ -62,7 +70,7 @@ div.foods {
 
 ul.foods {
     list-style-type: none;
-    padding: 0;
+    padding: 0px;
 }
 
 div.hobbies {
@@ -84,12 +92,13 @@ ul.hobbies {
 
 .nav li {
     display: inline;
+    padding: 8px;
     font-size: 1.1rem;
 }
 
 a {
     text-decoration: none;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     color: rgb(0, 78, 100);
 }
 
@@ -101,4 +110,10 @@ a:hover {
 div.github {
     text-align: center;
     padding: 50px;
+}
+
+footer {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    text-transform: capitalize;
 }
