--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
@@ -61,7 +57,6 @@ p {
 ul {
     line-height: 1.6;
     font-size: 1rem;
-    font-family: "Roboto", sans-serif;
 }
 
 div.foods {
@@ -94,6 +89,7 @@ ul.hobbies {
     display: inline;
     padding: 8px;
     font-size: 1.1rem;
+    font-weight: bold;
 }
 
 a {
@@ -110,10 +106,15 @@ a:hover {
 div.github {
     text-align: center;
     padding: 50px;
+    font-weight: bold;
 }
 
 footer {
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     text-transform: capitalize;
+}
+
+li {
+    font-family: "Roboto", sans-serif;
 }
