--- a/contact-style.css
+++ b/contact-style.css
@@ -1,46 +1,147 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap");
 
 content {
-    max-width: 800px;
-    margin: auto;
+  max-width: 800px;
+  margin: auto;
 }
 
 body {
-    background-color: rgba(159, 255, 203, .4)
+  background-color: rgba(159, 255, 203, 0.4);
 }
 
 h1 {
-    text-transform: uppercase;
-    text-align: center;
-    letter-spacing: 10px;
-    font-family: "Afacad Flux", sans-serif;
-    font-size: 4rem;
-    margin: 10;
-    padding: 5;
-    border: 4px solid rgb(0, 78, 100);
-    border-radius: 10px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 10px;
+  font-family: "Afacad Flux", sans-serif;
+  font-size: 4rem;
+  margin: 10;
+  padding: 5;
+  border: 4px solid rgb(0, 78, 100);
+  border-radius: 10px;
 }
 
 nav {
-    list-style-type: none;
-    margin: 3;
-    padding: 0;
-    overflow: hidden;
-    text-align: center;
+  list-style-type: none;
+  margin: 3;
+  padding: 0;
+  overflow: hidden;
+  text-align: center;
 }
 
 .nav li {
-    display: inline;
-    padding: 8px;
-    font-size: 1.1rem;
-    font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
+  display: inline;
+  padding: 8px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  font-family: "Courier New", Courier, monospace;
 }
 
 a {
-    text-decoration: none;
-    color: rgb(0, 78, 100);
+  text-decoration: none;
+  color: rgb(0, 78, 100);
 }
+
+a:hover {
+  text-decoration: underline;
+  color: rgb(0, 165, 207);
+}
+
+.contact {
+  font-family: "Comfortaa", sans-serif;
+  text-align: center;
+  width: 400px;
+  border: solid rgb(0, 78, 100);
+  padding: 20px;
+  border-radius: 30px;
+  margin: 0 auto;
+  background-color: rgb(0, 78, 100);
+  color: rgb(177, 247, 208);
+}
+
+.contactText {
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  color: rgb(0, 78, 100);
+  margin: 20px;
+  padding: 20px;
+}
+
+div.email {
+  padding: 10px;
+}
+
+div.github {
+  padding: 10px;
+}
+
+div.form {
+  padding: 10px;
+}
+
+form {
+  text-align: center;
+  margin: 20px;
+  padding: 10px;
+  height: 500px;
+}
+
+label {
+  font-family: "Comfortaa", sans-serif;
+  color: rgb(0, 78, 100);
+}
+
+div.message {
+  margin: 20px;
+  padding: 10px;
+}
+
+div.messageText {
+  margin: 10px;
+  padding: 10px;
+}
+
+input#name {
+  box-sizing: border-box;
+  border: solid rgba(0, 78, 100, 0.6);
+  border-radius: 10px;
+  height: 40px;
+}
+
+textarea {
+  width: 70%;
+  height: 150px;
+  padding: 20px;
+  box-sizing: border-box;
+  border: solid rgba(0, 78, 100, 0.6);
+  border-radius: 20px;
+  resize: none;
+}
+
+label {
+    margin: ;
+}
+
+button {
+    background-color: rgb(0, 78, 100);
+    border-radius: 10px;
+    color: rgb(177, 247, 208);
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: "Comfortaa", sans-serif;
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+
+button:hover {
+    background-color: rgba(159, 255, 203, 0.4);
+    color: rgb(0, 78, 100);
+    transition-duration: 0.3s;
+}
+
 
